# factoradic

./: .gitignore  README.md  pyproject.toml
.github/workflows/: reuse.yml
.reuse/: dep5
src/factoradic/: __init__.py
tests/: test_factoriadic.py
